# unitree_ros

robots/aliengo_description/: CMakeLists.txt
robots/aliengo_description/aliengo_srdf/: CMakeLists.txt  package.xml
robots/aliengo_description/aliengo_srdf/srdf/: aliengo.srdf.xacro
robots/aliengo_description/aliengo_urdf/: CMakeLists.txt  package.xml
robots/aliengo_description/aliengo_urdf/urdf/: aliengo.urdf.xacro  leg.xacro  prova.urdf
robots/b2w_description/launch/: display.launch  gazebo.launch
robots/b2w_description/urdf/: b2w_description.urdf
robots/b2w_description/xacro/: leg.xacro  robot.srdf.xacro  robot.urdf.xacro
