<?xml version="1.0"?>
<package format="2">
  <name>aliengo_urdf</name>
  <version>0.0.0</version>
  <description>The aliengo urdf package</description>

  <maintainer email="aliengo@unitree.cc">unitree</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
